retirados espaços do input identificação

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "e8258e34",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "\n",
     "linha = int(input('Qual a linha?: ') ) - 2\n",
     "\n",
-    "df = pd.read_excel('teste.xlsm')\n",
+    "df = pd.read_excel(r'C:\\Users\\z0026jjc\\OneDrive - Atos\\teste.xlsm')\n",
     "df = df.drop(['Cod_Category', 'Cod_Category2', 'Cod_Category3', 'Template', ], axis='columns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e694ebaa",
    "metadata": {},
    "outputs": [
@@ -25,10 +25,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Workplace DWP Win 10 Local Client File Share Encryption\n",
-      "Arquivos na rede corrompendo\n",
-      "Usuário informa que ao abrir ou salvar arquivos em pastas de rede criptografadas o arquivo não abre ou é corrompido.\n",
-      "Incident\n"
+      "Security and Access PKI Services PKI Certificate\n",
+      "Ativação de PKI\n",
+      "Usuário solicita ajuda para ativar seu novo crachá com PKI\n",
+      "Service Request\n"
      ]
     }
    ],
